<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_descubrir"
        android:icon="?android:attr/actionModeWebSearchDrawable"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_favoritos"
        android:icon="@android:drawable/star_big_off"
        android:title="@string/title_favoritos" />
    <item
        android:id="@+id/navigation_perfil"
        android:icon="@android:mipmap/sym_def_app_icon"
        android:title="@string/title_me" />

</menu>