<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_inicio">

    <fragment
        android:id="@+id/navigation_inicio"
        android:name="com.bookavo.pg.Home"
        android:label="@string/title_home"
        tools:layout="@layout/home" />

    <fragment
        android:id="@+id/navigation_descubrir"
        android:name="com.bookavo.pg.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.bookavo.pg.Profile"
        android:label="@string/title_me"
        tools:layout="@layout/profile"/>
    <fragment
        android:id="@+id/navigation_explorar"
        android:name="com.bookavo.pg.Explorar"
        android:label="@string/title_dashboard"
        tools:layout="@layout/explorar"/>
    <fragment
        android:id="@+id/navigation_favoritos"
        android:name="com.bookavo.pg.Home"
        android:label="@string/title_favoritos"
        tools:layout="@layout/home"/>
</navigation>