<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="240dp"
        android:layout_height="280dp"
        android:layout_marginRight="12dp"
        android:background="@color/white"
        android:backgroundTint="@color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_style"
            android:backgroundTint="@color/black"
            android:orientation="vertical"
            android:padding="12sp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cosmos_book_image"
                android:backgroundTint="#99000000"
                android:backgroundTintMode="src_atop"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="#FF9800"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/home_book_1_category"/>

            <TextView
                    android:layout_width="202dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="12dp"
                    android:layout_weight="0"
                    android:text="@string/home_book_2_name"
                    android:textColor="@color/white"
                    android:textSize="20sp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/home_book_1_description"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>