<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".inAppUI.Home">

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/home_linear_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_recomendation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="40dp"
                android:text="@string/home_title"
                android:textColor="@color/black_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/daily_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.49" />

            <HorizontalScrollView
                android:id="@+id/daily_list"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="25dp"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:id="@+id/linear_daily_list"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <TextView
                android:id="@+id/recent_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginBottom="12dp"
                android:text="@string/home_book_1_title2"
                android:textColor="@color/black_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_list" />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recycleSuperHero"/>

            <HorizontalScrollView
                android:id="@+id/recientes"
                android:layout_width="match_parent"
                android:layout_height="264dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_list"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="264sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="130sp"
                                android:layout_height="184sp"
                                android:background="@drawable/rounded_style"
                                android:src="@drawable/cosmos_book_image" />

                            <TextView
                                android:id="@+id/recent_book_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10sp"
                                android:layout_marginBottom="10sp"
                                android:text="@string/home_book_1_recent"
                                android:textColor="@color/black_light"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/recent_book_author"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/home_book_1_author"
                                android:textColor="@color/black_light_sub"
                                android:textSize="10sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/new_section_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginBottom="10dp"
                android:text="@string/home_book_1_news"
                android:textColor="@color/black_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_list" />

            <HorizontalScrollView
                android:id="@+id/new_books"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_list"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="264sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/new_image"
                                android:layout_width="130sp"
                                android:layout_height="184sp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/cosmos_book_image" />

                            <TextView
                                android:id="@+id/new_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10sp"
                                android:layout_marginBottom="10sp"
                                android:text="@string/home_book_1_recent"
                                android:textColor="@color/black_light"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/author_book_new"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/home_book_1_author"
                                android:textColor="@color/black_light_sub"
                                android:textSize="10sp" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/recomendation_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginBottom="5dp"
                android:text="@string/home_book_1_talvez"
                android:textColor="@color/black_light"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_list" />

            <HorizontalScrollView
                android:id="@+id/sugerencia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="13sp"
                android:layout_marginBottom="64sp"
                tools:ignore="SpeakableTextPresentCheck">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="8sp">

                        <ImageView
                            android:id="@+id/image_sugerencia_3"
                            android:layout_width="40sp"
                            android:layout_height="40sp"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cosmos_book_image" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10sp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/book_name_sugerencia"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/home_book_1_name"
                                android:textColor="@color/black_light" />

                            <TextView
                                android:id="@+id/book_sugerencia_author"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/home_book_1_author"
                                android:textColor="@color/black_light_sub" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="8sp">

                        <ImageView
                            android:id="@+id/image_sugerencia_4"
                            android:layout_width="40sp"
                            android:layout_height="40sp"
                            android:adjustViewBounds="true"
                            android:background="@drawable/rounded_style"
                            android:fitsSystemWindows="false"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cosmos_book_image" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="10sp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/book_name_sugerencia_2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/home_book_1_name"
                                android:textColor="@color/black_light" />

                            <TextView
                                android:id="@+id/book_sugerencia_author_2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/home_book_1_author"
                                android:textColor="@color/black_light_sub" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>